# amaranth

./: .gitignore  INSTALL.md  LICENSE  README.md  configure.ac
example/: README.md
lib/graph/: graph_base.cc  graph_base.h
lib/gtf/: gene.h  genome.cc  transcript.cc  transcript.h
lib/util/: util.h
scripts/: polyA-UMI-reads.sh
src/: Makefile.am  amaranth.cc  amaranth.h  amaranth_aux.hpp  analyzer.cc  analyzer.h  assembler.cc  assembler.h  aster.cc  aster.h  aster_aux.hpp  basic_algo.cc  basic_algo.h  bridger.cc  bundle.cc  bundle.h  bundle_base.cc  bundle_base.h  bundle_bridge.cc  config.cc  config.h  gtf.cc  hit.cc  hit.h  hyper_set.cc  hyper_set.h  main.cc  path.cc  path.h  previewer.cc  previewer.h  scallop.cc  scallop.h  splice_graph.cc  splice_graph.h  vertex_info.cc  vertex_info.h
